feat - Add button for Sketchpad size & reset and style it

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <div class="container">
-    </div>
+    <!-- Button to change size and reset drawing -->
+     <button onclick="newSketchPad()"> NEW SKETCH PAD </button>
+     <!-- Sketching area -->
+    <div class="container"></div>
 </body>
 </html>
